<resources>
    <string name="app_name">A2B</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_user">User</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_user_not_found">Error, User Not Found</string>
    <string name="field_required">Error, Field Is Required</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="signin_checkbox">Remember Me</string>


    <!-- Sign Up Activity -->
    <string name="signup_label">Sign Up for A2B</string>
    <string name="signup_username_hint">Username</string>
    <string name="signup_pwd_hint">Password</string>
    <string name="signup_pwdConf_hint">Confirm Password</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_phone_hint">Phone #</string>
    <string name="signup_button">Sign Up</string>
    <string name="signup_pwdConf_req">Please confirm your password</string>
    <string name="signup_pwdConf_ok">Passwords match</string>
    <string name="signup_pwdWeak">Weak</string>
    <string name="signup_pwdGood">Good</string>
    <string name="signup_pwdStrong">Strong</string>
    <string name="signup_pwd_specs">Passwords Must:\nBe 8 characters or more\nContain one special character</string>
    <string name="signup_pwd_specError">Password must contain a special character</string>
    <string name="signup_pwd_lenError">Password must be 8 characters or more</string>
    <string name="signup_usr_taken">Username not available</string>
    <string name="signup_usr_open">Username is available</string>
    <string name="signup_usr_default">Username must be unique</string>
    <string name="signup_phone_error">Phone number is invalid</string>
    <string name="signup_email_error">Email is invalid</string>
    <string name="signup_pwdMatch_error">Passwords don\'t match</string>
    <string name="signup_pwdStr_error">Password isn\'t strong enough</string>
    <string name="signup_creation_error">Unable to create user</string>
    <string name="signup_usrLen_error">Please enter a username</string>
    <string name="signup_contact_msg">Contact Information</string>
    <string name="signup_car_msg">Vehicle Information</string>
    <string name="signup_carYear_error">Please enter a proper car year</string>
    <string name="signup_carMake_error">Please enter a proper car make</string>
    <string name="signup_carModel_error">Please enter a proper car model</string>
    <string name="signup_carColor_error">Please enter a proper car color</string>
    <string name="signup_accountType">Account Type</string>
    <string name="signup_rider">Rider</string>
    <string name="signup_both">Rider + Driver</string>

    <string name="title_activity_location">Map</string>

    <!--Code for google maps api -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyCcJvOdnYtQ9ES2-SQRYlHoHgGnc46Pfco
    </string>

    <!-- Generic Vehicle Strings -->
    <string name="carYear">Year</string>
    <string name="carMake">Make</string>
    <string name="carModel">Model</string>
    <string name="carColor">Color</string>

    <!--Main map activtiy-->
    <string name="set_start">Set Start Location</string>
    <string name="set_end">Set End Location</string>
    <string name="confirm_trip">Request Ride</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="warning_message">Please place a marker before trying to set start/end trip location.</string>
    <string name="keyword_warning_message">Please input a valid entry</string>
    <string name="double_warning_message">"Invalid entry for amount please write an amount in format x.xx above $0.00 ."</string>
    <string name="start_location">Start Location</string>
    <string name="end_location">End Location</string>
    <string name="enter_fare">Enter Fare : </string>
    <string name="title_activity_driver_location">Map</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>

    <!-- Rider Request Confirmation Dialog Strings -->
    <string name="rideConf_title">Request Details</string>
    <string name="rideConf_startTitle">Pickup:</string>
    <string name="rideConf_endTitle">Dropoff:</string>
    <string name="rideConf_distanceTitle">Distance:</string>
    <string name="rideConf_descripTitle">Description:</string>
    <string name="rideConf_enterFare">Enter Fare:</string>

    <!-- RideCompleteDialog Strings -->
    <string name="rideComplete_title">Ride Details</string>
    <string name="rideComplete_driverTitle">Driver:</string>
    <string name="rideComplete_riderTitle">Rider:</string>
    <string name="rideComplete_startTitle">Pickup:</string>
    <string name="rideComplete_endTitle">Dropoff:</string>
    <string name="rideComplete_fareTitle">Fare:</string>

    <!-- request_info_dialog Strings -->
    <string name="requestInfo_title">Ride Details</string>
    <string name="requestInfo_riderTitle">Rider:</string>
    <string name="requestInfo_startTitle">Pickup:</string>
    <string name="requestInfo_endTitle">Destination:</string>
    <string name="requestInfo_fareTitle">Fare:</string>
    <string name="requestInfo_descripTitle">Description:</string>

    <!-- MarkerInfoDialog Strings -->
    <string name="markerInfo_accept">Accept</string>
    <string name="markerInfo_cancel">Cancel</string>
    <string name="markerInfo_error">Unable to accept request\nPlease try again</string>

    <!-- EditProfileActivity Strings -->
    <string name="edit_car_year">Year:</string>
    <string name="edit_car_make">Make:</string>
    <string name="edit_car_model">Model:</string>
    <string name="edit_car_color">Color:</string>

    <!-- Location Menu String-->
    <string name="view_profile">View Profile</string>
    <string name="change_role">Change Role</string>
    <string name="request_list">View Requests</string>
    <string name="sign_out">Sign Out</string>

    <!-- Request List Activity Strings-->
    <string name="max_price">Max Price</string>
    <string name="max_price_per_km">Max Price/KM</string>
    <string name="no_sort_value">No Filter</string>

    <!-- Request Detail Activity Strings-->
    <string name="request_detail_title">Request Details</string>
    <string name="willing_drivers">Willing Drivers</string>
    <string name="pay">Pay</string>
    <string name="status">Status:</string>

    <!-- Multi Purpose Strings -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_request_detail">RequestDetailActivity</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="complete">Complete</string>
    <string name="title_activity_empty_map">Map</string>
    <string name="insert_value">Insert Value</string>
    <string name="empty_wallet">0.00</string>
    <string name="car_detail">Car Details</string>
    <string name="not_a_driver">You need to be a driver to do that! Please create a new rider/driver account instead of a rider only account.</string>
    <string name="go_online">Update Data</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="offline_message">Please connect to the internet to update your offline changes</string>
    <string name="address_na">Address Not Available</string>
    <string name="location_req_short">Location Required</string>
    <string name="location_req_long">This app requires location permissions to function.</string>

    <!-- Request Status Strings -->
    <string name="waiting">Waiting for a Driver to Accept</string>
    <string name="accepted">Accepted By Driver(s)</string>
    <string name="confirmed">Rider Has Confirmed Driver\'s Acceptance</string>
    <string name="in_progress">The Ride is in Progress</string>
    <string name="ride_complete">The ride is complete, Driver is awaiting payment.</string>
    <string name="paid">Completed and Paid For</string>

    <!-- Search by keyword dialog -->
    <string name="search_by_keyword">Search By Keyword</string>
    <string name="description">Description</string>
    <string name="locale">Locale:</string>

    <!-- Progress dlg keyword -->
    <string name="refreshing">Refreshing...</string>
    <string name="rider_refreshing_message">Sending requests made while offline....</string>
    <string name="driver_refreshing_message">Sending acceptances made while offline....</string>

</resources>
