<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmput301f16t11.a2b.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/activity_signup_errorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/redText"
            android:visibility="gone"/>

        <TextView android:id="@+id/activity_signup_radioMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/activity_signup_errorMsg"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:text="@string/signup_accountType" />

        <RadioGroup android:id="@+id/activity_signup_buttonGroup"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/activity_signup_radioMsg"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/activity_signup_riderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_rider" />
            <RadioButton android:id="@+id/activity_signup_bothButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_both"
                android:checked="true"/>
        </RadioGroup>

        <EditText android:id="@+id/activity_signup_usr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_below="@id/activity_signup_buttonGroup"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="14sp"
            android:hint="@string/signup_username_hint"/>

        <ImageView android:id="@+id/activity_signup_usrIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/activity_signup_usr" />

        <TextView android:id="@+id/activity_signup_usrMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_signup_usr"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/signup_usr_default"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView android:id="@+id/activity_signup_contactMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_signup_usrMsg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:text="@string/signup_contact_msg" />

        <EditText android:id="@+id/activity_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_signup_contactMsg"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:hint="@string/signup_email_hint"/>

        <EditText android:id="@+id/activity_signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_signup_email"
            android:layout_marginTop="16dp"
            android:inputType="phone"
            android:textSize="14sp"
            android:hint="@string/signup_phone_hint" />
        <RelativeLayout android:id="@+id/activity_signup_carLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_signup_phone">

            <TextView android:id="@+id/activity_signup_carMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:text="@string/signup_car_msg" />

            <EditText android:id="@+id/activity_signup_carYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_signup_carMsg"
                android:layout_marginTop="8dp"
                android:hint="@string/carYear"
                android:inputType="number"
                android:maxLength="4" />

            <EditText android:id="@+id/activity_signup_carMake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_signup_carYear"
                android:layout_marginTop="8dp"
                android:hint="@string/carMake"
                android:inputType="text" />

            <EditText android:id="@+id/activity_signup_carModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_signup_carMake"
                android:layout_marginTop="8dp"
                android:hint="@string/carModel"
                android:inputType="text" />

            <EditText android:id="@+id/activity_signup_carColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_signup_carModel"
                android:layout_marginTop="8dp"
                android:hint="@string/carColor"
                android:inputType="text" />
        </RelativeLayout>

        <Button android:id="@+id/activity_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_signup_carLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/signup_button"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
    </RelativeLayout>
</ScrollView>
