<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/viewProfile"
        android:orderInCategory="100"
        android:title="@string/view_profile"/>
    <item
        android:id="@+id/changeRole"
        android:orderInCategory="100"
        android:title="@string/change_role"/>
    <item
        android:id="@+id/viewRequests"
        android:orderInCategory="100"
        android:title="View Requests"/>

    <item
        android:id="@+id/signOut"
        android:orderInCategory="100"
        android:title="@string/sign_out"/>

    <item
        android:id="@+id/refresh"
        android:title = "refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="20"
        android:tint ="@color/white"
        app:showAsAction="always"
        />

</menu>