<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginStart="32dp"
    android:layout_height="match_parent">

    <TextView android:id="@+id/request_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "16dp"
        android:layout_marginBottom="16dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/request_detail_title"/>

    <LinearLayout android:id="@+id/dialog_rideComplete_driverLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginBottom="8dp">

        <TextView android:id="@+id/request_detail_driver_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/rideComplete_driverTitle"/>

        <TextView android:id="@+id/request_detail_driver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:text="Test Driver"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/dialog_rideComplete_riderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:weightSum="3">

        <TextView android:id="@+id/request_detail_rider_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rideComplete_riderTitle"/>

        <TextView android:id="@+id/request_detail_rider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Test Rider"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/dialog_rideComplete_startLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:weightSum="3">

        <TextView android:id="@+id/request_detail_pickup_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/rideComplete_startTitle"/>

        <TextView android:id="@+id/request_detail_pickup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Test Pickup"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/dialog_rideComplete_endLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:weightSum="3">

        <TextView android:id="@+id/request_detail_dest_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/rideComplete_endTitle"/>

        <TextView android:id="@+id/request_detail_dropoff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Test Dropoff"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/dialog_rideComplete_fareLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:weightSum="3">

        <TextView android:id="@+id/request_detail_fare_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/rideComplete_fareTitle"/>

        <TextView android:id="@+id/request_detail_fare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Test Fare"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="wrap_content">
    <Button android:id="@+id/request_detail_delete"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="10sp"
        android:text="@string/delete" />

    <Button android:id="@+id/request_detail_accept"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="10sp"
        android:text="@string/accept" />

        <Button android:id="@+id/request_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textSize="10sp"
            android:text="@string/confirm" />

        <Button android:id="@+id/request_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="10sp"
        android:text="@string/complete" />
    </LinearLayout>
    <TextView android:id="@+id/willing_drivers_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "16dp"
        android:layout_marginBottom="16dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/willing_drivers"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/accepted_list" />


</LinearLayout>