<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="48dp"
    android:layout_marginBottom="48dp"
    android:layout_marginEnd="32dp"
    android:layout_marginStart="32dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/rideConf_title" />
    </LinearLayout>

    <LinearLayout android:id="@+id/rideConf_startRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:weightSum="3">

        <TextView android:id="@+id/rideConf_startTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical|end"
            android:textStyle="bold"
            android:text="@string/rideConf_startTitle" />

        <TextView android:id="@+id/rideConf_startText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:minLines="1"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout android:id="@+id/rideConf_endRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:weightSum="3">

        <TextView android:id="@+id/rideConf_endTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical|end"
            android:textStyle="bold"
            android:text="@string/rideConf_endTitle" />

        <TextView android:id="@+id/rideConf_endText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:maxLines="1"
            android:minLines="1"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout android:id="@+id/rideConf_distanceRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:weightSum="3">

        <TextView android:id="@+id/rideConf_distanceTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical|end"
            android:text="@string/rideConf_distanceTitle"
            android:textStyle="bold"/>

        <TextView android:id="@+id/rideConf_distanceText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout android:id="@+id/rideConf_enterRow"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView android:id="@+id/rideConf_fareTitle"
            android:text="@string/enter_fare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical|end"
            android:textStyle="bold"/>

        <EditText android:id="@+id/rideConf_fareText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout android:id="@+id/rideConf_descripRow"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:weightSum="3">
            <TextView android:id="@+id/rideConf_descripTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical|end"
                android:text="@string/rideConf_descripTitle"
                android:textStyle="bold"/>
        </LinearLayout>


        <EditText android:id="@+id/rideConf_descripText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:maxLines="3"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout android:id="@+id/riderConf_buttonRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button android:id="@+id/confirmRequest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>

        <Button android:id="@+id/cancelRequest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

</LinearLayout>
